--- a/Vinyl/.project
+++ b/Vinyl/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>B3_LILLE_J2EE_HAMY_DENEUVILLERS</name>
+	<name>Vinyl</name>
 	<comment></comment>
 	<projects>
 	</projects>
